# Conveyancer

./: .gitignore  AUDIT-PLAN.md  AUDIT.md  BACKLOG.md  CODE-REVIEW.md  Cargo.toml  DECISIONS.md  NOTICE.md  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  windows.yml
audit/: findings-pass1.json  rootcause-pass.json
crates/app/: Cargo.toml  tauri.conf.json
crates/app/capabilities/: default.json
crates/app/src/: advisor.rs  ai.rs  altopt.rs  buildqueue.rs  chat.rs  cutover.rs  empires.rs  import.rs  lib.rs  main.rs  opportunities.rs  session.rs  tokens.rs  wizard.rs
crates/app/tests/: advisor.rs  ai_rank.rs  altopt.rs  buildqueue.rs  clock.rs  cutover.rs  import.rs  nodes.rs  opportunities.rs  proposals.rs  session.rs
crates/gamedata/: Cargo.toml
crates/gamedata/assets/: docs-fixture.json  world-nodes.json
crates/gamedata/src/: db.rs  docs.rs  lib.rs  worldnodes.rs
crates/persist/: Cargo.toml
crates/persist/src/: lib.rs  memory.rs  plan_file.rs  store.rs
crates/persist/tests/: memory_parity.rs
crates/web/: Cargo.toml
deploy/: Caddyfile  Dockerfile
docs/: 02-ui-spec.md  04-sdd.md
renderer/: .env.web  index.html  package.json  playwright.audit.config.ts  playwright.config.ts  playwright.web.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  seed.mjs  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
renderer/e2e/: a-resume-dashboard.spec.ts  audit-advisor.spec.ts  audit-graph.spec.ts  audit-import.spec.ts  audit-make.spec.ts  audit-map.spec.ts  audit-planner-core.spec.ts  audit-power.spec.ts  audit-solver.spec.ts  audit-wizard.spec.ts  boot-screen.spec.ts  claim-release-reclaim.spec.ts  claim-tier.spec.ts  desktop-sync.spec.ts  empires.spec.ts  exit-criterion.spec.ts  flow-band.spec.ts  geyser-claim.spec.ts  graph-context-menu.spec.ts  graph-motion-pack.spec.ts  graph-search.spec.ts  make-multi-node.spec.ts  make-power.spec.ts  map-motion-pack.spec.ts  mobile-dashboard.spec.ts  new-empire.spec.ts  phase2-empire.spec.ts  phase3-proposals.spec.ts  phase4-import.spec.ts  phase5-advisor.spec.ts  phase6-errors.spec.ts  pipe-junction.spec.ts  pipe-route.spec.ts  route-waypoints.spec.ts  w1c-buildqueue.spec.ts  w2b-optimizer.spec.ts  w2c-build-sheet.spec.ts  w3-next-moves.spec.ts  w4-ai-rank.spec.ts  w5-next-home.spec.ts  (+4 more)
renderer/e2e-audit/: advisor-probes.spec.ts  gamedata-probes.spec.ts  graph-probes.spec.ts  import-probes.spec.ts  make-probes.spec.ts  map-probes.spec.ts  planner-core-probes.spec.ts  session-probes.spec.ts  shell-probes.spec.ts  solver-probes.spec.ts  web-probes.spec.ts  wizard-probes.spec.ts
renderer/e2e-visual/: map-visual.spec.ts  vh.ts
renderer/e2e-web/: audit-web-docs.spec.ts  web-smoke.spec.ts
renderer/patches/: @etothepii__satisfactory-file-parser.patch
renderer/src/: App.tsx  base.css  (+1 more)
scripts/: fetch-icons.mjs  gen-app-icons.mjs  gen-resource-polys.mjs  gen-world-nodes.py  regen-web-wasm.sh
(+132 files in other folders)
