[package]
name = "app"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["shell"]
# The Tauri desktop shell. The dev-bridge binary builds without it, so a
# container lacking WebKitGTK can still drive the full core headlessly.
shell = ["dep:tauri", "dep:tauri-plugin-opener", "dep:tauri-build"]
# Production shell: serve the embedded renderer bundle instead of pointing the
# window at devUrl (localhost:5173). Tauri gates this on its custom-protocol
# feature — `cargo tauri build` enables it implicitly, but we invoke cargo
# directly, so shipping builds MUST use `--features prod`.
prod = ["shell", "tauri/custom-protocol"]

[[bin]]
name = "app"
path = "src/main.rs"
required-features = ["shell"]

[[bin]]
name = "gen-tokens"
path = "src/bin/gen_tokens.rs"

[[bin]]
name = "dev-bridge"
path = "src/bin/dev_bridge.rs"

[dependencies]
planner-core = { path = "../planner-core" }
solver = { path = "../solver" }
gamedata = { path = "../gamedata" }
persist = { path = "../persist" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tauri = { version = "2", optional = true }
tauri-plugin-opener = { version = "2", optional = true }
tiny_http = "0.12"

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dev-dependencies]
tempfile = "3.27.0"
# Enables the deterministic persist-failure seam for app's test targets only
# (resolver = "2": dev-dependency features never reach production builds).
persist = { path = "../persist", features = ["fault-injection"] }
