[package]
name = "persist"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# Deterministic persist-failure injection for tests. Never enabled by
# production builds: app pulls it in via [dev-dependencies] only, and with
# resolver = "2" dev-dependency features don't leak into normal builds.
fault-injection = []

[dependencies]
planner-core = { path = "../planner-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rusqlite.workspace = true

[dev-dependencies]
tempfile = "3"
